Add a periodic timer to check that alerts are being played when needed.
Signed-off-by: Tzachi Dar <tzachi.dar@gmail.com>

Conflicts:
	app/src/main/java/com/eveningoutpost/dexdrip/UtilityModels/Notifications.java

Conflicts:
	app/src/main/AndroidManifest.xml

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -155,6 +155,12 @@
             android:name=".SystemStatus"
             android:label="@string/title_activity_system_status" >
         </activity>
+        
+        <receiver android:name="com.eveningoutpost.dexdrip.UtilityModels.NotificationsReceiver" >
+            <intent-filter>
+                <action android:name="com.eveningoutpost.dexdrip.UtilityModels.Notifications" />
+            </intent-filter>
+        </receiver>
     </application>
 
 </manifest>
